# api/src/Authoring/UserInterface/Http/Api/Controller/RuleController.php
@@ -1,0 +1,37 @@
+<?php
+
+declare(strict_types=1);
+
+namespace Dairectiv\Authoring\UserInterface\Http\Api\Controller;
+
+use Dairectiv\Authoring\Application\Rule\Get;
+use Dairectiv\Authoring\Domain\Object\Rule\Exception\RuleNotFoundException;
+use Dairectiv\Authoring\UserInterface\Http\Api\Response\Rule\RuleResponse;
+use Dairectiv\SharedKernel\Application\Query\QueryBus;
+use Dairectiv\SharedKernel\Domain\Object\Assert;
+use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
+use Symfony\Component\HttpFoundation\JsonResponse;
+use Symfony\Component\HttpKernel\Exception\NotFoundHttpException;
+use Symfony\Component\Routing\Attribute\Route;
+
+#[Route('/rules', name: 'rule_')]
+final class RuleController extends AbstractController
+{
+    public function __construct(private readonly QueryBus $queryBus)
+    {
+    }
+
+    #[Route('/{id}', name: 'get', requirements: ['id' => '^[a-z0-9-]+$'], methods: ['GET'])]
+    public function get(string $id): JsonResponse
+    {
+        try {
+            $output = $this->queryBus->fetch(new Get\Input($id));
+
+            Assert::isInstanceOf($output, Get\Output::class);
+
+            return $this->json(RuleResponse::fromRule($output->rule));
+        } catch (RuleNotFoundException $e) {
+            throw new NotFoundHttpException($e->getMessage(), $e);
+        }
+    }
+}
